fix(responsive): align shop spacing with design tokens

--- a/cultureglow24/src/components/shop/BundlesSection.module.css
+++ b/cultureglow24/src/components/shop/BundlesSection.module.css
@@ -2,8 +2,8 @@
   padding: calc(var(--cg-u) * 9) 0;
   max-width: 1280px;
   margin: 0 auto;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding-left: calc(var(--cg-u) * 3);
+  padding-right: calc(var(--cg-u) * 3);
 }
 
 .bundlesHeader {
